Update heading from Junoon to Rohit

--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
 
 <body>
     <div class="container">
-        <h1>Flask + MySQL App [2 tier] - Junoon 🔥</h1>
+        <h4>Flask + MySQL App [2 tier] - Rohit 🔥</h4>
 
         <div class="messages">
             {% for message in messages %}
